# mcpify

./: README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: publish.yml
example-projects/python-cmd-tool/: cmd-tool.json  cmd-tool.py
example-projects/python-server-project/: server.json  server.py
examples/fastapi-todo-server/: test_api.py
examples/python-cmd-tool/: cmd-tool.json  cmd-tool.py
examples/python-examples/python-calculator/: function.py
examples/python-server-project/: server.json  server.py
mcpify/: __init__.py  backend.py  cli.py  gitingest_service.py  validate.py  wrapper.py
mcpify/core/analysis/: detector.py  python_parser.py
mcpify/core/generation/: mcp_generator.py  runner.py
mcpify/core/semantic/: api_matcher.py  embeddings.py  llm_client.py
mcpify/detect/: __init__.py  ast.py  base.py  camel.py  composite.py  factory.py  openai.py  types.py
mcpify/models/: function.py  repository.py  tool.py
mcpify/templates/: mcp_server_http.py.jinja2  mcp_server_stdio.py.jinja2
mcpify/ui/: __init__.py  app.py  main.py  models.py  session_manager.py
mcpify/ui/components/: __init__.py  chat_interface.py  sidebar.py
mcpify/ui/pages/: __init__.py
tests/: test_validate.py
